chatge/static/style.css
html, 
body {
    height: 100%;
    margin: 0px;
    background-color: #CED4DA;
}

.chat-scrollable::-webkit-scrollbar {
    width: 8px;
}

.chat-scrollable::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 1rem;
}

.main-container {
    display: grid;
    grid-template-columns: 1fr 700px 1fr;
    margin: 0px;
    height: 100%;
} 

.chat-container {
    border-radius: 1rem;
    margin-top: 1.2rem;
    background-color: #F8F9FA;
    box-shadow: 5px 5px 8px #ADB5BD;
    height: 95vh;
    grid-template-rows: 1fr 100px;
    display: grid;
    overflow: hidden;
}

.chat-scrollable {
    overflow-y: auto;
}

.chat-area {
    border-radius: 1rem 1rem 0 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.chat-area>div:nth-child(2n) {
    background-color: #E9ECEF;
}

.chat-area > :first-child {
    margin-top: auto;
}

.typing-area {
    border-top: solid 1px #CED4DA;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.input {
    border: solid 1px #CED4DA;
    border-radius: 1rem;
    background-color: #E9ECEF;
    width: 100%;
    box-sizing: border-box;
    padding: 1rem;
    margin: 1.2rem;
    outline: none;
    font-size: 14px;
}

.send-button {
    margin-right: 1.5rem;
    background-color: #3a86ff;
    border: solid 1px #3a86ff;
    border-radius: 1.5rem;
    color: white;
    height: 50px;
    width: 100px;
    font-size: 16px;
    cursor: pointer;
}

.send-button:hover:enabled {
    background-color: #2d6ed6;
}

.chat-message {
    padding: 0.5rem 2rem;
    width: 100%;
    box-sizing: border-box;
}

.message-from {
    font-size: 14px;
    color: #6C757D;
}

.message-text {
    white-space: pre-line;
}

.send-button:disabled {
    opacity: 0.5;
    cursor: auto;
}

